--- a/PasswordStore.CLI/PasswordStore.CLI.csproj
+++ b/PasswordStore.CLI/PasswordStore.CLI.csproj
@@ -6,7 +6,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\PasswordStore.AppStarter\PasswordStore.AppStarter.csproj" />
       <ProjectReference Include="..\PasswordStore.Lib\PasswordStore.Lib.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="CommandLineParser" Version="2.8.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     </ItemGroup>
 
 </Project>
