--- a/PasswordStore.AppStarter/PasswordStore.AppStarter.csproj
+++ b/PasswordStore.AppStarter/PasswordStore.AppStarter.csproj
@@ -6,6 +6,8 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+      <PackageReference Include="NLog" Version="4.7.8" />
+      <PackageReference Include="NLog.Extensions.Logging" Version="1.7.1" />
     </ItemGroup>
 
     <ItemGroup>
