--- a/PasswordStore.Lib/PasswordStore.Lib.csproj
+++ b/PasswordStore.Lib/PasswordStore.Lib.csproj
@@ -12,6 +12,8 @@
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.3" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+      <PackageReference Include="NLog" Version="4.7.8" />
+      <PackageReference Include="NLog.Extensions.Logging" Version="1.7.1" />
     </ItemGroup>
 
     <ItemGroup>
