Добавлены представления для входа и регистрации пользователя

--- a/PasswordStore.UI/PasswordStore.UI.csproj
+++ b/PasswordStore.UI/PasswordStore.UI.csproj
@@ -5,15 +5,23 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
-        <Folder Include="Models\"/>
-        <AvaloniaResource Include="Assets\**"/>
-        <None Remove=".gitignore"/>
+        <Folder Include="Models\" />
+        <AvaloniaResource Include="Assets\**" />
+        <None Remove=".gitignore" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="0.10.10"/>
-        <PackageReference Include="Avalonia.Desktop" Version="0.10.10"/>
+        <PackageReference Include="Avalonia" Version="0.10.10" />
+        <PackageReference Include="Avalonia.Desktop" Version="0.10.10" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.10"/>
-        <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.10"/>
+        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.10" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.10" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+        <PackageReference Include="NLog" Version="4.7.8" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="1.7.1" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\PasswordStore.AppStarter\PasswordStore.AppStarter.csproj" />
+      <ProjectReference Include="..\PasswordStore.Lib\PasswordStore.Lib.csproj" />
     </ItemGroup>
 </Project>
